fix(navigation): Fix alignment issues

--- a/src/site/_includes/components/link/index.scss
+++ b/src/site/_includes/components/link/index.scss
@@ -1,16 +1,6 @@
 @use '@moduk/frontend/src/css' as moduk;
+@use 'global/links';
 
 .govuk-link.moduk-link--maroon {
-  &,
-  &:visited {
-    color: moduk.moduk-colour('light-maroon');
-  }
-
-  &:focus {
-    color: moduk.govuk-colour('black');
-  }
-
-  &:hover {
-    color: moduk.moduk-colour('dark-maroon');
-  }
+  @include links.moduk-link-maroon;
 }
